<resources>
    <string name="app_name">Stock Watch</string>
    <string name="stock_symbol">Stock Symbol</string>
    <string name="stock_name">Stock Name</string>
    <string name="stock_price">Stock Price</string>
    <string name="price_change">Price Change</string>
    <string name="change_percent">Change Percent</string>
    <string name="stock_change_percent_direction">Stock Change Percent Direction</string>
    <string name="add_stock">Add Stock</string>
    <string name="stock_selection">Stock Selection</string>
    <string name="add_stock_message">Please enter a Stock symbol:</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="empty_stock_message">Input is empty. Please try again with non-empty stock symbol.\nFor example, TSLA.</string>
    <string name="unknown_item">Unknown item</string>
    <string name="no_network_connection_message_title">No Network Connection</string>
    <string name="no_network_connection_message">Stocks Cannot Be Updated Without A Network Connection</string>
    <string name="symbol">symbol</string>
    <string name="name">name</string>
    <string name="company_name">companyName</string>
    <string name="latest_price">latestPrice</string>
    <string name="change">change</string>
    <string name="change_percentage">changePercent</string>
    <string name="delete_stock_title">Delete Stock</string>
    <string name="delete">DELETE</string>
    <string name="delete_stock_message">Delete Stock Symbol</string>
    <string name="question">\?</string>
    <string name="hyphen">-</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="duplicate_stock_title">Duplicate Stock</string>
    <string name="make_a_selection">Make a Selection</string>
    <string name="stock_not_found_message">No data for stock symbol</string>
    <string name="stock_not_found_title">Symbol Not Found: %s</string>
    <string name="duplicate_stock_message">Stock Symbol %s is already displayed</string>
    <string name="on_load_no_network_message">Stocks Watch App Needs Network Connection To Fetch Latest Stock Prices.\nLoading Saved Stocks With Price As 0</string>
    <string name="add_stock_no_network_message">Stocks Cannot Be Added Without A Network Connection</string>
    <string name="refresh_no_network_message">Stocks Cannot Be Updated Without A Network Connection</string>
    <string name="never_mind">NEVER MIND</string>
    <string name="stock_remove_toast_message">Stock %s removed from Watchlist</string>
</resources>